ajout des fléches de navigation et des bullet points

--- a/assets/style.css
+++ b/assets/style.css
@@ -125,9 +125,11 @@ header {
 /* Gestion des fleches du carrousel */
 #banner .arrow {
 	position: absolute;
+	cursor: pointer;
 }
 #banner .arrow_left {
 	left: 10px;
+	
 }
 #banner .arrow_right {
 	right: 10px;
